istio/virtual-services/distribution-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: distribution
  namespace: distribution
spec:
  hosts:
  - "*"
  gateways:
  - supply-chain-gateway
  http:
  - match:
    - uri:
        prefix: /distribution
    route:
    - destination:
        host: distribution-service.distribution.svc.cluster.local
        port:
          number: 8080
