istio/virtual-services/inventory-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inventory
  namespace: inventory
spec:
  hosts:
  - "*"
  gateways:
  - supply-chain-gateway
  http:
  - match:
    - uri:
        prefix: /inventory
    route:
    - destination:
        host: inventory-service.inventory.svc.cluster.local
        port:
          number: 8080
