istio/virtual-services/logistics-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: logistics
  namespace: logistics
spec:
  hosts:
  - "*"
  gateways:
  - supply-chain-gateway
  http:
  - match:
    - uri:
        prefix: /logistics
    route:
    - destination:
        host: logistics-service.logistics.svc.cluster.local
        port:
          number: 8080
