istio/virtual-services/procurement-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: procurement
  namespace: procurement
spec:
  hosts:
  - "*"
  gateways:
  - supply-chain-gateway
  http:
  - match:
    - uri:
        prefix: /procurement
    route:
    - destination:
        host: procurement-service.procurement.svc.cluster.local
        port:
          number: 8080
